# CP3P_Homography

./: CMakeLists.txt  P3P_HD.h  README.md  demo_P3P.cpp  demo_P3P.h  demo_Ransac.cpp  demo_Ransac.h  main.cpp
Cambridge/KingsCollege_1/: image.txt  intr.txt  world.txt
Cambridge/KingsCollege_2/: image.txt  intr.txt  world.txt
Cambridge/KingsCollege_3/: image.txt  intr.txt  world.txt
Cambridge/KingsCollege_4/: image.txt  intr.txt  world.txt
Cambridge/KingsCollege_5/: image.txt  intr.txt  pose.txt  world.txt
Cambridge/extract_data_ShopFacade_1/: image.txt  intr.txt  world.txt
EPNP/: EPNP.cpp  EPNP.h
colmap_util/: models.cc  types.h
utils/: functionSolver.h
utils/colmap_util/: models.h
utils/cost_function/: cost_function.h
